--- a/_includes/css/vars/space.scss
+++ b/_includes/css/vars/space.scss
@@ -5,6 +5,6 @@ $space-small: 1em;
 $space-none: 0em;
 
 
-$width-medium: 600px;
-$width-large: 800px;
-$width-xlarge: 1200px;
+$width-medium: 37.5em;
+$width-large: 50em;
+$width-xlarge: 75em;
